# PyDoc2Markdown

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PROJECT_STRUCTURE.md  PUBLIC_LAUNCH.md  README.md  codecov.yml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
examples/: basic_usage.py  custom_template.md.j2
examples/docs/: __init__.md  cli.md  index.md
examples/docs/core/: __init__.md  config.md  crossref.md  doctor.md  filtering.md  generator.md  outputs.md  parser.md  report.md  type_hints.md  watcher.md
examples/docs/utils/: __init__.md  helpers.md
examples/sample_project/: README.md
examples/sample_project/docs/: index.md  shop_demo.md
examples/sample_project/docs/api/shop_demo/: __init__.md  inventory.md  orders.md
examples/sample_project/src/shop_demo/: __init__.py  inventory.py  orders.py
src/pydoc2markdown/: __init__.py  cli.py
src/pydoc2markdown/core/: __init__.py  config.py  crossref.py  doctor.py  filtering.py  generator.py  outputs.py  parser.py  report.py  type_hints.py  watcher.py
src/pydoc2markdown/templates/: minimal.md  module.md
src/pydoc2markdown/utils/: __init__.py  helpers.py
tests/: __init__.py  conftest.py  test_cli.py  test_config.py  test_crossref.py  test_examples.py  test_generator.py  test_parser.py  test_type_hints.py  test_watcher.py
