[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pydoc2markdown"
version = "0.9.3"
description = "Convert Python docstrings to Markdown documentation."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "f1sherFM", email = "f1sherFM@example.com" },
]
keywords = ["documentation", "markdown", "docstring", "python"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Documentation",
    "Topic :: Software Development :: Documentation",
    "Typing :: Typed",
]
dependencies = [
    "Jinja2>=3.1.0",
    "docstring-parser>=0.15",
    "tomli>=1.2.0; python_version<'3.11'",
]

[project.optional-dependencies]
watch = [
    "watchdog>=3.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.5.0",
    "ruff>=0.1.0",
    "pre-commit>=3.5.0",
    "watchdog>=3.0",
]

[project.scripts]
pydoc2markdown = "pydoc2markdown.cli:main"

[project.urls]
Homepage = "https://github.com/f1sherFM/PyDoc2Markdown"
Repository = "https://github.com/f1sherFM/PyDoc2Markdown"
Issues = "https://github.com/f1sherFM/PyDoc2Markdown/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/pydoc2markdown"]

[tool.ruff]
target-version = "py310"
line-length = 100
exclude = ["templates/", "*.md"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # Pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "W",   # pycodestyle warnings
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = []

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = "watchdog.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tomllib"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tomli"
ignore_missing_imports = true

[tool.pydoc2markdown]
output = "docs"
theme = "default"
recursive = true

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
addopts = "-ra -q --strict-markers --cov=pydoc2markdown --cov-report=term-missing"
